# estimagic-typing

./: .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  setup.cfg
src/estimagic/: bla.py
tests/: test_bla.py
