[metadata]
name = estimagic
description = Tools to solve difficult numerical optimization problems.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/OpenSourceEconomics/estimagic-typing
author = Janos Gabler
author_email = janos.gabler@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    cloudpickle
    joblib
    joblib
    numpy>=1.17.0
    pandas
    plotly
    pybaum>=0.1.2
    scipy>=1.2.1
python_requires = >=3.10
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/estimagic/_version.py
